# massive_OpenCL

./: .gitignore  README.md
exam_excercises/MatrixAdd/: CMakeLists.txt  Matrix.cpp  MatrixMain.cpp
exam_excercises/PrefixSum/: main.cpp
exam_excercises/Summe/: Summe.cpp  Summe_Kernel.cl
exam_excercises/shared/: OpenCLMgr.h
mag/ImageFX/: CMakeLists.txt  ImageFX.cl
mag/ImageFX/ImageFX/: ImageFX.cl  ImageFX.cpp  ImageFX.h  OpenCLMgr.cpp  OpenCLMgr.h  stdafx.cpp  stdafx.h
mag/ImageFX/ImageFX.xcodeproj/: project.pbxproj
mag/ImageFX/ImageFX.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mag/ImageFX/ImageFX.xcodeproj/project.xcworkspace/xcuserdata/mag.xcuserdatad/: UserInterfaceState.xcuserstate
mag/ImageFX/ImageFX.xcodeproj/xcuserdata/mag.xcuserdatad/xcschemes/: xcschememanagement.plist
mag/ImageFX/cmake/: FindSDL_gfx.cmake
mag/MatrixAdd/MatrixAdd/: Matrix.cpp  Matrix.h  MatrixMain.cpp  Matrix_Kernel.cl  OpenCLMgr.cpp  OpenCLMgr.h
mag/MatrixAdd/MatrixAdd.xcodeproj/: project.pbxproj
mag/MatrixAdd/MatrixAdd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mag/MatrixAdd/MatrixAdd.xcodeproj/project.xcworkspace/xcuserdata/mag.xcuserdatad/: UserInterfaceState.xcuserstate
mag/MatrixAdd/MatrixAdd.xcodeproj/xcuserdata/mag.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
mag/MatrixAdd/MatrixAdd.xcodeproj/xcuserdata/mag.xcuserdatad/xcschemes/: xcschememanagement.plist
mag/MatrixMultGlobal/MatrixMultGlobal/: MatMultGlob.cpp  MatMultGlob_Kernel.cl  OpenCLMgr.cpp  OpenCLMgr.h
mag/MatrixMultGlobal/MatrixMultGlobal.xcodeproj/: project.pbxproj
mag/MatrixMultGlobal/MatrixMultGlobal.xcodeproj/project.xcworkspace/xcuserdata/mag.xcuserdatad/: UserInterfaceState.xcuserstate
mag/MatrixMultGlobal/MatrixMultGlobal.xcodeproj/xcuserdata/mag.xcuserdatad/xcschemes/: MatrixMultGlob.xcscheme  xcschememanagement.plist
mag/MatrixMultParallel/MatrixMultParallel/: MatMultPara.cpp  MatMultPara_Kernel.cl  OpenCLMgr.cpp  OpenCLMgr.h
mag/MatrixMultParallel/MatrixMultParallel.xcodeproj/: project.pbxproj
mag/MatrixMultParallel/MatrixMultParallel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mag/MatrixMultParallel/MatrixMultParallel.xcodeproj/project.xcworkspace/xcuserdata/mag.xcuserdatad/: UserInterfaceState.xcuserstate
mag/MatrixMultParallel/MatrixMultParallel.xcodeproj/xcuserdata/mag.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
mag/MatrixMultParallel/MatrixMultParallel.xcodeproj/xcuserdata/mag.xcuserdatad/xcschemes/: MatrixMultPara.xcscheme  xcschememanagement.plist
mag/PrefixSum/PrefixSum/: OpenCLMgr.cpp  OpenCLMgr.h  PrefixSum.cpp  PrefixSum_Kernels.cl  PrefixSum_Kernels_solution.cl
mag/PrefixSum/PrefixSum.xcodeproj/: project.pbxproj
mag/PrefixSum/PrefixSum.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mag/PrefixSum/PrefixSum.xcodeproj/project.xcworkspace/xcuserdata/mag.xcuserdatad/: UserInterfaceState.xcuserstate
mag/PrefixSum/PrefixSum.xcodeproj/xcuserdata/mag.xcuserdatad/xcschemes/: xcschememanagement.plist
mag/Summe/Summe/: OpenCLMgr.cpp  OpenCLMgr.h  Summe.cpp  Summe_Kernel.cl
mag/Summe/Summe.xcodeproj/: project.pbxproj
mag/Summe/Summe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mag/Summe/Summe.xcodeproj/project.xcworkspace/xcuserdata/mag.xcuserdatad/: UserInterfaceState.xcuserstate
mag/Summe/Summe.xcodeproj/xcuserdata/mag.xcuserdatad/xcschemes/: xcschememanagement.plist
mag/_python/: calcStatistic.cl  histogramKernel.cl  histogramKernels.cl  histogramOCL.py  main.py  reduceStatistic.cl  testKernel.cl
mag/histogram/: CMakeLists.txt
mag/histogram/include/: clstatushelper.h
mag/histogram/src/: Histogram.cpp  OpenCLMgr.cpp  OpenCLMgr.h  histogramKernels.cl
mag/histogramPy/: histogramKernels.cl  histogramOCL.py  histogramPy.py  main.py  pyopencl_tests.py  testKernel.py
own_solutions/: clstatushelper.h
own_solutions/MatrixAdd/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixMain.cpp  Matrix_Kernel.cl  OpenCLMgr.cpp  OpenCLMgr.h
own_solutions/Summe/: OpenCLMgr.cpp  Summe_Kernel.cl
own_solutions/own_solutions/MatrixAdd/: Matrix.h  Matrix_Kernel.cl  OpenCLMgr.cpp  OpenCLMgr.h
own_solutions/own_solutions/Summe/: OpenCLMgr.cpp  OpenCLMgr.h
sample_solutions/HelloWorldCl/: CMakeLists.txt
sample_solutions/HelloWorldCl/HelloWorldCL/: CMakeLists.txt  HelloWorld.cpp  HelloWorld_Kernel.cl
sample_solutions/MatrixAdd_Muster/: Matrix.cpp  Matrix.h  MatrixMain.cpp  Matrix_Kernel.cl  OpenCLMgr.cpp  OpenCLMgr.h
tasks/: temp_start_main.c
tasks/BitonicSort/: BitonicSort.cpp  CMakeLists.txt  bitonic.cl  bitonic2.cl  main.cpp
tasks/Histogram/: CMakeLists.txt  main.cpp
tasks/MatrixAdd/: MatrixMain.cpp  Matrix_Kernel.cl
tasks/PrefixSum/: CMakeLists.txt
tasks/Summe/: Summe.cpp  Summe_Kernel.cl
tasks/shared/: OpenCLMgr.cpp  ansi_colors.h
ts160_solutions/MatrixAdd/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixMain.cpp  Matrix_Kernel.cl  OpenCLMgr.cpp  OpenCLMgr.h
ts160_solutions/Prüfungsaufgaben/Aufgabe1/: CMakeLists.txt  Histogram.cl  Histogram.cpp  Histogram.h  Histogram2.cl  Histogram3.cl  main.cpp
ts160_solutions/Prüfungsaufgaben/Aufgabe2/: CMakeLists.txt  PrefixSum.cpp  PrefixSum.h  main.cpp  prefixSum.cl
ts160_solutions/Prüfungsaufgaben/Aufgabe3/: BitonicSort.cpp  BitonicSort.h  CMakeLists.txt  bitonic.cl  bitonic2.cl  createValidationData.py  main.cpp
ts160_solutions/Prüfungsaufgaben/shared/: OpenCLMgr.cpp  OpenCLMgr.h  ansi_colors.h  clstatushelper.h
ts160_solutions/Summe/: CMakeLists.txt  Summe.cpp  Summe_Kernel.cl
(+1 files in other folders)
